add nats for storage

--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ marshmallow==3.26.1
 multidict==6.1.0
 nats-py==2.9.0
 ordered-set==4.1.0
+ormsgpack==1.7.0
 packaging==24.2
 propcache==0.2.1
 pydantic==2.10.6
